syntax = "proto3";
package proto;

option go_package = "github.com/0x-ximon/portman/api/proto";

service OrdersService {
    rpc SubmitOrder (SubmitOrderRequest) returns (SubmitOrderResponse);
}

message SubmitOrderRequest {
    uint64 id = 1;
    Side side = 2;
    Type type = 3;
    double price = 4;
    double quantity = 5;
    uint64 user_id = 6;
}

message SubmitOrderResponse {
    Result result = 1;
}

enum Side {
    SIDE_UNSPECIFIED = 0;
    SIDE_BUY = 1;
    SIDE_SELL = 2;
}

enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_MARKET = 1;
    TYPE_LIMIT = 2;
}

enum Result {
    RESULT_UNSPECIFIED = 0;
    RESULT_SUCCESS = 1;
    RESULT_FAILURE = 2;
}
